--- a/list.html
+++ b/list.html
@@ -19,6 +19,7 @@
       <p style="white-space: normal;color:#fff;font-size:12px;font-weight:50px;margin: 0 5em 0 5em;text-align: center;" role="heading" class="ui-title">Aplikasi Video Lagu
 				<br>Anak - Anak</p>
       <a href="index.html" data-icon="back" data-ajax="false" data-iconpos="notext">Search</a>
+      <a href="l#" data-icon="refresh" data-ajax="false" onclick="location.reload()" data-iconpos="notext">Search</a>
     </div>
     <div role="main" align="center">
       <ul id="daftar_video" data-role="listview" data-inset="false" data-theme="a" data-inset="true">
